--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -237,6 +237,16 @@
         </div>
       </div>
     </form>
+    <div class="col-xl-12 mt-2">
+      <ag-grid-angular style=" height: 520px;"
+                       class="ag-theme-alpine"
+                       [rowData]="accountList"
+                       [pagination]="true"
+                       [columnDefs]="columnDefs"
+                       [defaultColDef]="agGridOptions.defaultColDef"
+                       (cellClicked)="onGridClick($event)">
+      </ag-grid-angular>
+    </div>
   </mat-tab>
 
 
