--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -265,6 +265,9 @@ $material-icons-font-path: '~material-icons/iconfont/';
                 .mat-form-field-suffix {
                     top: 0.4rem;
                 }
+                .mat-select-arrow-wrapper {
+                    transform: inherit;
+                }
             }
             &.small {
                 width: 50%;
